--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my npm module scaffold 我的 npm 包的脚手架",
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/.bin/webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,12 @@
   },
   "homepage": "https://github.com/teeeemoji/my-npm-scaffold#readme",
   "devDependencies": {
-    "lodash": "^4.17.4"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "lodash": "^4.17.4",
+    "webpack": "^3.10.0"
   }
 }
