--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run build",
+    "test": "./node_modules/.bin/mocha",
+    "posttest": "open ./mochawesome-report/mochawesome.html"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
     "lodash": "^4.17.4",
+    "mocha": "^5.0.0",
+    "mochawesome": "^3.0.1",
+    "sinon": "^4.1.6",
+    "sinon-chai": "^2.14.0",
     "webpack": "^3.10.0"
   }
 }
