--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "my npm module scaffold 我的 npm 包的脚手架",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf dist/* mochawesome-report/*",
+    "prebuild":"npm run clean",
     "build": "./node_modules/.bin/webpack",
     "pretest": "npm run build",
     "test": "./node_modules/.bin/mocha",
-    "posttest": "open ./mochawesome-report/mochawesome.html"
+    "posttest": "open ./mochawesome-report/mochawesome.html",
+    "style": "./node_modules/.bin/eslint --ext .js -f html . > ./log/style.html"
   },
   "repository": {
     "type": "git",
