--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist/* mochawesome-report/*",
-    "prebuild":"npm run clean",
+    "prebuild": "npm run clean",
     "build": "./node_modules/.bin/webpack",
     "pretest": "npm run build",
     "test": "./node_modules/.bin/mocha",
     "posttest": "open ./mochawesome-report/mochawesome.html",
-    "style": "./node_modules/.bin/eslint --ext .js -f html . > ./log/style.html"
+    "style": "./node_modules/.bin/eslint --fix src test"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-stage",
+    "commit-msg": "node script/verify-commit-msg.js"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,11 +35,19 @@
   "homepage": "https://github.com/teeeemoji/my-npm-scaffold#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
+    "eslint": "^4.15.0",
+    "eslint-config-fbjs": "^2.0.1",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-relay": "0.0.20",
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.1",
