--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pretest": "npm run build",
     "test": "./node_modules/.bin/mocha",
     "posttest": "open ./mochawesome-report/mochawesome.html",
-    "style": "./node_modules/.bin/eslint --fix src test"
+    "style": "./node_modules/.bin/eslint --fix src test",
+    "commit": "git-cz"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -41,6 +42,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
+    "commitizen": "^2.9.6",
     "eslint": "^4.15.0",
     "eslint-config-fbjs": "^2.0.1",
     "eslint-plugin-babel": "^4.1.2",
