--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.15.0",
     "eslint-config-fbjs": "^2.0.1",
     "eslint-plugin-babel": "^4.1.2",
@@ -56,5 +57,10 @@
     "sinon": "^4.1.6",
     "sinon-chai": "^2.14.0",
     "webpack": "^3.10.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
