--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-relay": "0.0.20",
+    "lint-staged": "^6.0.1",
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.1",
