--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
+  "env": {
+  },
   "presets": [
-    "env"
+    [
+      "env"
+    ]
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties"
+  ],
+  "ignore": [
   ]
 }
