--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
+    "codecov": "^3.0.0",
     "commitizen": "^2.9.6",
     "conventional-changelog": "^1.1.7",
     "cz-conventional-changelog": "^2.1.0",
@@ -57,6 +58,7 @@
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.1",
+    "nyc": "^11.4.1",
     "sinon": "^4.1.6",
     "sinon-chai": "^2.14.0",
     "webpack": "^3.10.0",
@@ -66,5 +68,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "dependencies": {}
 }
